// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI overrides take precedence 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
function f() {
  console.log("should have tab width 8");
}
function f() {
  console.log("should have space width 2");
}
function f() {
  console.log("should have space width 8");
}
function f() {
  console.log(
    "should have space width 2 despite ../.editorconfig specifying 8, because ./.hg is present"
  );
}
console.log("should have no semi");
console.log("jest/__best-tests__/.file.js should have semi");
console.log("jest/__best-tests__/file.js should have semi");
console.log("jest/Component.js should not have semi");
console.log("jest/Component.test.js should have semi");
function js() {
  console.log("js/file.js should have tab width 8 (1 if CLI)");
}
"use strict";

module.exports = {
  endOfLine: "auto",
  tabWidth: 8,
};
function noConfigJs() {
  console.log("no-config/file.js should have no semicolons");
}
function packageJs() {
  console.log("package/file.js should have tab width 3");
}
function rcJson() {
  console.log.apply(null, [
    "rc-json/file.js",
    "should have trailing comma",
    "and single quotes",
  ]);
}
function rcToml() {
  console.log.apply(null, [
    "rc-toml/file.js",
    "should have trailing comma",
    "and single quotes",
  ]);
}
function rcYaml() {
  console.log.apply(null, [
    "rc-yaml/file.js",
    "should have trailing comma",
    "and single quotes",
  ]);
}

=================================== (write) ====================================
[]
`;

exports[`accepts configuration from --config 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
function js() {
  console.log("js/file.js should have tab width 8 (1 if CLI)");
}

=================================== (write) ====================================
[]
`;

exports[`prints error message when no file found with --find-config-path 1`] = `
=================================== (stderr) ===================================
[error] Can not find configure file for ".."

=================================== (write) ====================================
[]
`;

exports[`resolves configuration file with --find-config-path file 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
.prettierrc

=================================== (write) ====================================
[]
`;

exports[`resolves configuration from external files 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
function f() {
  console.log("should have tab width 8");
}
function f() {
  console.log("should have space width 2");
}
function f() {
  console.log("should have space width 8");
}
function f() {
  console.log(
    "should have space width 2 despite ../.editorconfig specifying 8, because ./.hg is present"
  );
}
console.log("should have no semi");
console.log("jest/__best-tests__/.file.js should have semi");
console.log("jest/__best-tests__/file.js should have semi");
console.log("jest/Component.js should not have semi");
console.log("jest/Component.test.js should have semi");
function js() {
  console.log("js/file.js should have tab width 8 (1 if CLI)");
}
"use strict";

module.exports = {
  endOfLine: "auto",
  tabWidth: 8,
};
function noConfigJs() {
  console.log("no-config/file.js should have no semicolons");
}
function packageJs() {
  console.log("package/file.js should have tab width 3");
}
function rcJson() {
  console.log.apply(null, [
    "rc-json/file.js",
    "should have trailing comma",
    "and single quotes",
  ]);
}
function rcToml() {
  console.log.apply(null, [
    "rc-toml/file.js",
    "should have trailing comma",
    "and single quotes",
  ]);
}
function rcYaml() {
  console.log.apply(null, [
    "rc-yaml/file.js",
    "should have trailing comma",
    "and single quotes",
  ]);
}

=================================== (write) ====================================
[]
`;

exports[`resolves configuration from external files and overrides by extname 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
function noConfigTs() {
  console.log(
    "no-config/file.ts should have semicolons because it has a .ts extension"
  );
}
function packageTs() {
  console.log(
    "package/file.ts should have tab width 5 because it has .ts extension"
  );
}

=================================== (write) ====================================
[]
`;

exports[`resolves external configuration from package.json 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
console.log("should have no semi");

=================================== (write) ====================================
[]
`;

exports[`resolves json configuration file with --find-config-path file 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
rc-json\\.prettierrc.json

=================================== (write) ====================================
[]
`;

exports[`resolves toml configuration file with --find-config-path file 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
rc-toml\\.prettierrc.toml

=================================== (write) ====================================
[]
`;

exports[`resolves yaml configuration file with --find-config-path file 1`] = `
=================================== (stderr) ===================================

=================================== (stdout) ===================================
rc-yaml\\.prettierrc.yaml

=================================== (write) ====================================
[]
`;
